// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > schema > getSchemas > rejects unknown query parameter 1`] = `
{
  "error": {
    "context": {
      "errors": [
        {
          "code": "invalid_enum_value",
          "message": "Invalid enum value. Expected 'model' | 'deployment', received 'notValid'",
          "options": [
            "model",
            "deployment",
          ],
          "path": [
            "query",
            "kind",
          ],
          "received": "notValid",
        },
      ],
    },
    "message": "Invalid enum value. Expected 'model' | 'deployment', received 'notValid'",
    "name": "Error",
  },
}
`;

exports[`routes > schema > getSchemas > returns all schemas 1`] = `
{
  "schemas": [
    {
      "active": true,
      "createdAt": "2023-07-28T10:50:00.928Z",
      "description": "This is a description of the schema.",
      "hidden": false,
      "id": "example-deployment-schema-1",
      "kind": "deployment",
      "name": "Example Schema 1",
      "schema": {
        "Schema field 1": "field 1 info",
      },
      "updatedAt": "2023-07-28T10:50:00.928Z",
    },
    {
      "active": true,
      "createdAt": "2023-07-28T10:50:00.928Z",
      "description": "This is a description of the schema.",
      "hidden": false,
      "id": "example-model-schema-1",
      "kind": "model",
      "name": "Example Schema 1",
      "schema": {
        "Schema field 1": "field 1 info",
      },
      "updatedAt": "2023-07-28T10:50:00.928Z",
    },
  ],
}
`;

exports[`routes > schema > getSchemas > returns only deployment schemas with the deployment parameter 1`] = `
{
  "schemas": [
    {
      "active": true,
      "createdAt": "2023-07-28T10:50:00.928Z",
      "description": "This is a description of the schema.",
      "hidden": false,
      "id": "example-deployment-schema-1",
      "kind": "deployment",
      "name": "Example Schema 1",
      "schema": {
        "Schema field 1": "field 1 info",
      },
      "updatedAt": "2023-07-28T10:50:00.928Z",
    },
  ],
}
`;

exports[`routes > schema > getSchemas > returns only model schemas with the model parameter 1`] = `
{
  "schemas": [
    {
      "active": true,
      "createdAt": "2023-07-28T10:50:00.928Z",
      "description": "This is a description of the schema.",
      "hidden": false,
      "id": "example-model-schema-1",
      "kind": "model",
      "name": "Example Schema 1",
      "schema": {
        "Schema field 1": "field 1 info",
      },
      "updatedAt": "2023-07-28T10:50:00.928Z",
    },
  ],
}
`;
